# rlox

./: README.md
src/: expressions.rs  functions.rs  interpreter.rs  lib.rs  main.rs  parser.rs  resolver.rs  scanner.rs  statements.rs  types.rs
tree-sitter-rlox/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-rlox/bindings/c/: tree-sitter-rlox.pc.in
tree-sitter-rlox/bindings/go/: binding.go  binding_test.go
tree-sitter-rlox/bindings/node/: binding.cc  index.js
tree-sitter-rlox/bindings/python/tests/: test_binding.py
tree-sitter-rlox/bindings/python/tree_sitter_rlox/: __init__.py  binding.c
tree-sitter-rlox/bindings/rust/: build.rs  lib.rs
tree-sitter-rlox/bindings/swift/TreeSitterRlox/: rlox.h
tree-sitter-rlox/bindings/swift/TreeSitterRloxTests/: TreeSitterRloxTests.swift
tree-sitter-rlox/queries/: highlights.scm
tree-sitter-rlox/src/: grammar.json  node-types.json  parser.c
