[package]
name = "tree-sitter-rlox"
description = "A tree-sitter parser for the language rlox"
version = "0.1.0"
authors = ["Abreham Kassa <abrehamkassa19@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rlox"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/abrishk26/rlox"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
